--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -59,7 +59,7 @@ header nav a:hover::after {
     font-size: 13px;
 }
 
-@media screen and (max-width: 1119px) {
+@media screen and (max-width: 1279px) {
     header .container {
         padding-left: var(--body-padding);
     }
